--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "db:gen": "bun drizzle-kit generate --config=\"./server/db/drizzle/drizzle.config.ts\"",
-    "db:migrate": "bun \"./server/db/drizzle/migrate.ts\""
+    "db:migrate": "bun \"./server/db/drizzle/migrate.ts\"",
+    "serve": "bun ./server/server.ts --watch"
   },
   "jest": {
     "preset": "jest-expo"
@@ -45,13 +46,21 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^10.0.0",
+    "cookie-parser": "^1.4.7",
     "drizzle-kit": "^0.26.2",
     "drizzle-orm": "^0.35.3",
     "expo-checkbox": "^3.0.0",
+    "express-session": "^1.18.1",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "morgan": "^1.10.0",
